--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -1,12 +1,23 @@
 <div class="row">
   <div class="col-md-6">
-	  <h3><a href="https://datacarpentry.org/openrefine-socialsci/01-introduction/index.html" target="_blank">Day 1</a></h3>
+	  <h3><a href="https://swcarpentry.github.io/python-novice-inflammation/setup.html" target="_blank">Day 1</a></h3>
     <table class="table table-striped">
-      <tr> <td>18:00 AM</td>  <td>Introduction</td> </tr>
-      <tr> <td>18:10 AM</td>  <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a> </td>  </tr>
-      <tr> <td>18:20 AM</td>  <td>Setup</td> </tr>
-      <tr> <td>18:30 AM</td>  <td>1. Introduction to the course by a member of "The Carpentries" Society</td> </tr>
-      <tr> <td>18:40 AM</td>  <td>2. Introduction to "Functional Neurosurgery Research Center"</td> </tr>
-      <tr> <td>18:50 AM</td>  <td>3. Introduction of Instructors and Helpers</td> </tr>
-      <tr> <td>19:00 AM</td>  <td><a href="https://datacarpentry.org/shell-genomics/01-introduction/index.html" target="_blank">4. Python Basics</a></td> </tr>   
-      <tr> <td>19:30 PM</td>  <td><a href="https://datacarpentry.org/shell-genomics/02-the-filesystem/index.html" target="_blank">5. Python Basics-Data Project Management</a><tr> <td>11:00 AM</td>  <td>BREAK</td> </tr>" target="_blank">5.Loops-Part2</a></td> </tr>
+      <tr> <td>17:30 AM</td>  <td>Introduction</td> </tr>
+      <tr> <td>17:40 AM</td>  <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a> </td>  </tr>
+      <tr> <td>17:45 AM</td>  <td>Setup</td> </tr>
+      <tr> <td>17:50 AM</td>  <td>2. Introduction to "Functional Neurosurgery Research Center"</td> </tr>
+      <tr> <td>17:55 AM</td>  <td><a href="https://swcarpentry.github.io/python-novice-inflammation/01-intro/index.html" target="_blank">1. Python Basics</a></td> </tr>   
+      <tr> <td>18:20 PM</td>  <td><a href="hhttps://swcarpentry.github.io/python-novice-inflammation/02-numpy/index.html" target="_blank">2. Analyzing Patient Data</a></td> </tr>
+      <tr> <td>19:00 PM</td>  <td><a href="https://swcarpentry.github.io/python-novice-inflammation/02-numpy/index.html" target="_blank">3. Visualizing Tabular Data</a></td> </tr>
+      <tr> <td>19:45 AM</td>  <td>Wrap-up and Finish</td> </tr>
+	    
+          <h3><a href="https://swcarpentry.github.io/python-novice-inflammation/setup.html" target="_blank">Day 2: Working with big hospital data using Numpy</a></h3>
+    <table class="table table-striped">
+      <tr> <td>17:30 AM</td>  <td>Introduction</td> </tr>
+      <tr> <td>17:35 AM</td>  <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a> </td>  </tr>
+      <tr> <td>17:40 AM</td>  <td><a href="https://swcarpentry.github.io/python-novice-inflammation/04-loop/index.html" target="_blank">1. Repeating Actions</a></td> </tr>  
+      <tr> <td>18:10 AM</td>  <td><a href="hhttps://swcarpentry.github.io/python-novice-inflammation/05-lists/index.html" target="_blank">2. Storing Multiple Values</a></td> </tr>   
+      <tr> <td>18:55 PM</td>  <td><a href="https://swcarpentry.github.io/python-novice-inflammation/06-files/index.html" target="_blank">3. Analyzing from Multiple Tables</a></td> </tr>
+      <tr> <td>19:25 AM</td>  <td>Wrap-up and Finish</td> </tr>
+	
+	      
