--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -4,7 +4,7 @@
       <h3><a href="https://swcarpentry.github.io/python-novice-inflammation/setup.html" target="_blank">Day 1</a></h3>
     <table class="table table-striped">
       <tr> <td>17:30 AM</td>  <td>Introduction</td> </tr>  
-      <tr> <td>18:20 PM</td>  <td><a href="hhttps://swcarpentry.github.io/python-novice-inflammation/02-numpy/index.html" target="_blank">2. Analyzing Patient Data</a></td> </tr>
+      <tr> <td>18:20 PM</td>  <td><a href="https://swcarpentry.github.io/python-novice-inflammation/02-numpy/index.html" target="_blank">2. Analyzing Patient Data</a></td> </tr>
       <tr> <td>19:00 PM</td>  <td><a href="https://swcarpentry.github.io/python-novice-inflammation/02-numpy/index.html" target="_blank">3. Visualizing Tabular Data</a></td> </tr>
       <tr> <td>19:30 AM</td>  <td>Wrap-up and Finish</td> </tr>
 	    
